@@ -108,10 +108,8 @@ comes with this distribution for details.
 - Photography::EV
 - PkgConfig
 - PlugAuth
-- PlugAuth::Client
 - PlugAuth::Client::Tiny
 - PlugAuth::Lite
-- PlugAuth::Plugin::Audit
 - PlugAuth::Plugin::AuthenSimple
 - PlugAuth::Plugin::DBIAuth
 - PlugAuth::Plugin::Finger
