@@ -77,10 +77,8 @@ Mojolicious::Plugin::TtRenderer                = 1.53
 Photography::EV                                = 0.05
 PkgConfig                                      = 0.08526
 PlugAuth                                       = 0.26
-PlugAuth::Client                               = 0.20
 PlugAuth::Client::Tiny                         = 0.01
 PlugAuth::Lite                                 = 0.07
-PlugAuth::Plugin::Audit                        = 0.05
 PlugAuth::Plugin::AuthenSimple                 = 0.01
 PlugAuth::Plugin::DBIAuth                      = 0.03
 PlugAuth::Plugin::Finger                       = 0.01
